Sprint4.Project3:horizontal scroll was fixed.Part4

--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -10,8 +10,8 @@
   position: relative;
   box-sizing: border-box;
   /*border: 1px solid  #2A2C2F;*/
-  /*margin-left: auto;
-  margin-right:auto;*/
+  margin-left: auto;
+  margin-right:auto;
 }
 
 @media screen and (max-width: 1030px) {
