--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -12,8 +12,8 @@
   flex-direction: row;
   justify-content: space-between;
   box-sizing: border-box;
- /*margin-left: auto;
-  margin-right: auto;*/
+ margin-left: auto;
+  margin-right: auto;
 }
 
 @media screen and (max-width: 1054px) {
