--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,9 +5,10 @@
 
 }
 
-.content{
+
+/*.content{
   display: flex;
   flex-direction: column;
  
   margin: 0 auto;
-}
+}*/
