--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -6,6 +6,6 @@
     grid-template-columns: repeat(auto-fill,284px);
     gap: 20px;
     margin-bottom: 92px;
-    /* margin-left: auto;
-    margin-right: auto;*/
+     margin-left: auto;
+    margin-right: auto;
 }
